--- a/UniSellApplication/app/src/main/res/layout/activity_registration.xml
+++ b/UniSellApplication/app/src/main/res/layout/activity_registration.xml
@@ -64,7 +64,7 @@
         app:layout_constraintWidth_percent=".8" />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/reg_btn"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="264dp"
@@ -91,7 +91,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_button" />
+        app:layout_constraintTop_toBottomOf="@+id/reg_btn" />
 
     <TextView
         android:id="@+id/sign_in"
