--- a/UniSellApplication/app/src/main/res/layout/activity_login.xml
+++ b/UniSellApplication/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
         android:elevation="3dp"
         android:padding="13dp"
         android:hint="Password"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_login"
