--- a/UniSellApplication/app/src/main/res/layout/activity_login.xml
+++ b/UniSellApplication/app/src/main/res/layout/activity_login.xml
@@ -94,4 +94,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/account" />
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_login"
+        app:layout_constraintVertical_bias=".1"
+        android:scaleX=".5"
+        android:scaleY=".5"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
