--- a/UniSellApplication/app/src/main/res/layout/welcome_page.xml
+++ b/UniSellApplication/app/src/main/res/layout/welcome_page.xml
@@ -96,19 +96,30 @@
     </LinearLayout>
 
     <TextView
-        android:textAlignment="center"
+        android:id="@+id/textView4"
         android:layout_width="350dp"
-        android:textColor="@color/blue_2767"
-        android:fontFamily="@font/candal"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/candal"
         android:text="Resources for Fresno State Students. We are a platform where you can find your school necessities!"
-        android:textSize="17sp"
+        android:textAlignment="center"
+        android:textColor="@color/blue_2767"
+        android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.2"/>
 
-
-
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias=".1"
+        android:scaleX=".5"
+        android:scaleY=".5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
