--- a/UniSellApplication/app/src/main/res/values/colors.xml
+++ b/UniSellApplication/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="red_186">#B1102B</color>
     <color name="grey_cool">#ced1d4</color>
     <color name="valley_green">#5FA55E</color>
+    <color name="hint_color">#808080</color>
 </resources>
