--- a/UniSellApplication/app/src/main/res/values/themes.xml
+++ b/UniSellApplication/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.UniSellApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.UniSellApplication" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/red_186</item>
         <item name="colorPrimaryVariant">@color/blue_2767</item>
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
     <style name="Theme.UniSellApplication.NoActionBar">
