--- a/UniSellApplication/app/src/main/res/layout/welcome_page.xml
+++ b/UniSellApplication/app/src/main/res/layout/welcome_page.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.HomeActivity">
 
     <TextView
         android:id="@+id/textView2"
