--- a/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,13 @@
             android:id="@+id/nav_category"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/category" />
+        <item
+            android:id="@+id/nav_make_listing"
+            android:icon="@drawable/add_circle"
+            android:title="@string/make_listing" />
+        <item
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/baseline_bookmark_24"
+            android:title="@string/favorites" />
     </group>
 </menu>
