--- a/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,11 +6,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menuhome"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/menu_person"
             android:title="@string/profile" />
         <item
             android:id="@+id/nav_category"
