--- a/UniSellApplication/app/src/main/res/layout/fragment_create_listing.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_create_listing.xml
@@ -63,12 +63,13 @@
     <EditText
         android:id="@+id/editTextDescripiton"
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="230dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
+        android:gravity="top"
         android:hint="Add description here..."
+        android:maxWidth="0dp"
         android:inputType="textMultiLine"
-        android:paddingBottom="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_txt" />
@@ -79,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="1dp"
-        android:text="Description"
+        android:text="Price"
         android:textColor="@color/blue_2767"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -108,7 +109,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="5dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
