--- a/UniSellApplication/app/src/main/res/layout/welcome_page.xml
+++ b/UniSellApplication/app/src/main/res/layout/welcome_page.xml
@@ -36,7 +36,7 @@
         android:id="@+id/imageView2"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:src="@mipmap/student_book"
+        android:src="@mipmap/unisell_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
