--- a/UniSellApplication/app/src/main/res/layout/welcome_page.xml
+++ b/UniSellApplication/app/src/main/res/layout/welcome_page.xml
@@ -61,7 +61,8 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/key" />
+                android:src="@drawable/login"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,6 +70,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="Login"
+                android:textColor="@color/red_186"
                 android:fontFamily="@font/candal"
                 android:textSize="22sp" />
         </LinearLayout>
@@ -83,7 +85,8 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/registration" />
+                android:src="@drawable/register_icon"
+                android:paddingLeft="5dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,6 +94,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="Registration"
+                android:textColor="@color/red_186"
                 android:fontFamily="@font/candal"
                 android:textSize="22sp" />
         </LinearLayout>
