--- a/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,5 +24,10 @@
             android:id="@+id/nav_favorites"
             android:icon="@drawable/baseline_bookmark_24"
             android:title="@string/favorites" />
+        <item
+            android:id="@+id/nav_mission"
+            android:icon="@drawable/rocket"
+            android:title="@string/mission" />
+
     </group>
 </menu>
