--- a/UniSellApplication/app/src/main/res/layout/fragment_home.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_home.xml
@@ -57,6 +57,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="5dp"
             android:id="@+id/recent_rec"/>
 
