--- a/UniSellApplication/app/src/main/res/layout/recent_items.xml
+++ b/UniSellApplication/app/src/main/res/layout/recent_items.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical"
         android:padding="5dp">
         <com.makeramen.roundedimageview.RoundedImageView
@@ -25,24 +26,25 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/archivo"
             android:text="Recent Listings"
-            android:textSize="19sp"
+            android:textSize="25sp"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/recent_price"
-            android:layout_width="190dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
             android:singleLine="true"
             android:text="Price"
-            android:textSize="16sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/recent_cat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Category"
+            android:textSize="17sp"
             />
 
 
