--- a/UniSellApplication/app/src/main/res/layout/recent_items.xml
+++ b/UniSellApplication/app/src/main/res/layout/recent_items.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
@@ -14,8 +14,8 @@
         android:padding="5dp">
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/recent_img"
-            android:layout_width="280dp"
-            android:layout_height="190dp"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
             app:riv_corner_radius="14dp"
             android:scaleType="fitCenter"
             android:src="@mipmap/offers3"/>
