--- a/UniSellApplication/app/src/main/res/values/themes.xml
+++ b/UniSellApplication/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/red_186</item>
         <item name="colorPrimaryVariant">@color/blue_2767</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/red_186</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/grey_cool</item>
         <item name="colorSecondaryVariant">@color/white</item>
