Added Technology button on categories

--- a/UniSellApplication/app/src/main/res/layout/fragment_category.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_category.xml
@@ -23,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/registration_img"
-        app:layout_constraintVertical_bias="0.05">
+        app:layout_constraintVertical_bias="0.1">
 
         <LinearLayout
             android:id="@id/ic_textbook_layout"
@@ -51,7 +51,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/textbooks"
+                        android:id="@+id/textbooks_img"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center_horizontal"
@@ -64,10 +64,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/archivo"
-                        android:text="Textbooks"
+                        android:text="@string/textbooks"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -87,8 +87,7 @@
             app:layout_constraintTop_toTopOf="parent"
             >
 
-            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView
                 android:layout_width="110dp"
                 android:layout_height="120dp"
                 android:layout_margin="5dp"
@@ -103,7 +102,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/lab"
+                        android:id="@+id/lab_img"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center_horizontal"
@@ -113,67 +112,14 @@
 
                     <TextView
                         android:id="@+id/ic_lab"
-                        android:layout_width="80dp"
+                        android:layout_width="89dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/archivo"
-                        android:text="Lab Equiment"
+                        android:text="Lab Equipment"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/school_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/lab_layout"
-            app:layout_constraintTop_toTopOf="parent"
-            android:paddingLeft="5dp">
-
-            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="110dp"
-                android:layout_height="120dp"
-                android:layout_margin="5dp"
-                app:cardCornerRadius="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_horizontal"
-                    android:background="@color/red_186"
-                    android:onClick="School_supplies"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/school"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/school_material_pen"
-                        app:tint="@color/white" />
-
-                    <TextView
-                        android:id="@+id/ic_school"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:fontFamily="@font/archivo"
-                        android:text="School Supplies"
-                        android:textAlignment="center"
-                        android:textColor="@color/white"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -199,7 +145,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/other_layout"
+            app:layout_constraintEnd_toStartOf="@id/school_layout"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingRight="5dp">
 
@@ -219,7 +165,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/dorm"
+                        android:id="@+id/dorm_img"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center_horizontal"
@@ -233,14 +179,126 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/archivo"
-                        android:text="Dorm Essentials"
+                        android:text="@string/dorm_essentials"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
 
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/school_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/dorm_layout"
+            android:paddingLeft="5dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_margin="5dp"
+                app:cardCornerRadius="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/red_186"
+                    android:onClick="School_supplies"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/school_img"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/school_material_pen"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:id="@+id/ic_school"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:fontFamily="@font/archivo"
+                        android:text="@string/school_supplies"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/one_btn_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/two_btn_layout">
+
+        <LinearLayout
+            android:id="@+id/tech_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/other_layout"
+            android:paddingLeft="5dp">
+
+            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="110dp"
+                android:layout_height="120dp"
+                android:layout_margin="5dp"
+                app:cardCornerRadius="8dp">
+
+                <LinearLayout
+                    android:onClick="Technology"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/red_186"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/tech_img"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/computer_monitor"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:id="@+id/ic_tech"
+                        android:layout_width="90dp"
+                        android:paddingTop="2dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:fontFamily="@font/archivo"
+                        android:text="@string/technoloy"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
@@ -252,27 +310,25 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/dorm_layout"
-            android:paddingLeft="5dp
-">
+            app:layout_constraintStart_toEndOf="@+id/tech_layout"
+            android:paddingLeft="5dp">
 
-            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <androidx.cardview.widget.CardView
                 android:layout_width="110dp"
                 android:layout_height="120dp"
                 android:layout_margin="5dp"
                 app:cardCornerRadius="8dp">
 
                 <LinearLayout
-                    android:onClick="Other"
-                    android:layout_width="match_parent"
+                    android:layout_width="118dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:background="@color/red_186"
+                    android:onClick="Other"
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/other"
+                        android:id="@+id/other_img"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_gravity="center_horizontal"
@@ -286,23 +342,19 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/archivo"
-                        android:text="Other"
+                        android:paddingTop="2dp"
+                        android:text="@string/other"
                         android:textAlignment="center"
                         android:textColor="@color/white"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
-
 
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
     </LinearLayout>
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
