--- a/UniSellApplication/app/src/main/res/layout/fragment_home.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,8 @@
             android:background="@drawable/search_gb"
             android:padding="13dp"
             android:hint="Search Your Item Here..."
-            android:drawablePadding="5dp"/>
+            android:drawablePadding="5dp"
+            android:singleLine="true"/>
         <LinearLayout
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
