--- a/UniSellApplication/app/src/main/res/layout/activity_lab.xml
+++ b/UniSellApplication/app/src/main/res/layout/activity_lab.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/archivo"
-                android:text="Dorm Listings"
+                android:text="Lab Listings"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
