--- a/UniSellApplication/app/src/main/res/layout/fragment_lab.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_lab.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activities.OtherActivity">
+    tools:context=".ui.category.LabFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/archivo"
-                android:text="Other Listings"
+                android:text="Lab Equipment Listings"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
