--- a/UniSellApplication/app/src/main/res/layout/fragment_view_listing.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_view_listing.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01"
-         />
+        />
 
     <TextView
         android:id="@+id/title_txt"
@@ -34,16 +34,17 @@
         app:layout_constraintStart_toStartOf="@id/add_img_button"
         app:layout_constraintTop_toBottomOf="@+id/add_img_button" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextTitle"
         android:layout_width="400dp"
         android:layout_height="40dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Add title here..."
-        android:inputType="textMultiLine"
         android:gravity="center_vertical"
         android:paddingLeft="10dp"
+        android:text="Title"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_txt" />
@@ -62,18 +63,20 @@
         app:layout_constraintStart_toStartOf="@id/editTextTitle"
         app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextDescripiton"
         android:layout_width="400dp"
         android:layout_height="215dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
         android:gravity="top"
-        android:hint="Add description here..."
         android:maxWidth="0dp"
         android:maxLength="300"
         android:inputType="textMultiLine"
+        android:text="Description"
         android:paddingLeft="10dp"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_txt" />
@@ -82,7 +85,7 @@
         android:id="@+id/price_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="28.5dp"
         android:layout_marginBottom="1dp"
         android:text="Price $"
         android:textColor="@color/blue_2767"
@@ -91,50 +94,53 @@
         app:layout_constraintStart_toStartOf="@id/editTextTitle"
         app:layout_constraintTop_toBottomOf="@+id/editTextDescripiton" />
 
-    <EditText
+    <TextView
         android:id="@+id/editTextPrice"
-        android:layout_width="170dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:background="@drawable/edittext_background"
+        android:layout_marginTop="21.5dp"
         android:ems="10"
-        android:hint="  0.00"
-        android:inputType="textMultiLine"
+        android:text="0.00"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="5dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        app:layout_constraintStart_toEndOf="@+id/price_txt"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDescripiton" />
+
+    <TextView
+        android:id="@+id/category_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28.5dp"
+        android:layout_marginBottom="1dp"
+        android:text="Category"
+        android:textColor="@color/blue_2767"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/price_txt" />
 
-    <com.google.android.material.textfield.TextInputLayout
-
-        android:id="@+id/textInputLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="225dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="7dp"
-        android:hint="Select Category"
-        app:boxStrokeColor="@color/blue_2767"
-        app:endIconTint="@color/hint_color"
-        app:hintTextColor="@color/hint_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDescripiton">
-
-        <AutoCompleteTextView
-            android:id="@+id/SelectCategory"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:inputType="none"
-            android:textSize="15sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/add_listing_btn"
+    <TextView
+        android:id="@+id/editTextCategory"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Listing"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="40dp"
+        android:background="@drawable/edittext_background"
+        android:layout_marginTop="21.5dp"
+        android:ems="10"
+        android:text="Dorm Essentials"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:layout_marginStart="5dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        app:layout_constraintStart_toEndOf="@+id/category_txt"
         app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
