--- a/UniSellApplication/app/src/main/res/layout/activity_textbooks.xml
+++ b/UniSellApplication/app/src/main/res/layout/activity_textbooks.xml
@@ -5,12 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.category.TextbooksFragment">
+    tools:context=".activities.TextbooksActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/textboks_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/red_186"
+            app:title="Textbooks"
+            app:titleTextColor="@color/white"/>
 
         <EditText
             android:elevation="3dp"
